chore: temporaly disable storybook

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "@eveot/erp-ui",
+  "name": "@eveot-rp/ui",
   "version": "0.3.1",
-  "author": "Eveot Developers <developers@eveot.com>",
+  "author": "EveotRP",
   "license": "UNLICENSED",
   "files": [
     "dist"
   ],
+  "private": false,
   "type": "module",
   "module": "./dist/index.d.ts",
   "main": "./dist/index.js",
