--- a/.github/workflows/publish-storybook.yml
+++ b/.github/workflows/publish-storybook.yml
@@ -1,12 +1,9 @@
 name: CI/CD for Storybook
 
-# on:
-#   push:
-#     branches:
-#       - dev
-#   pull_request:
-#     branches:
-#       - dev
+on:
+  push:
+    branches:
+      - dev
 
 jobs:
   build:
