--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -3,7 +3,7 @@ name: Publish to npm
 on:
   push:
     branches:
-      - '**'
+      - 'dev'
 
 jobs:
   publish:
@@ -33,8 +33,11 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Install pnpm
+        run: npm install pnpm
+
       - name: Build project
-        run: npm run build
+        run: pnpm run build:lib
         continue-on-error: true
 
       - name: Check Build Status
