feat: update Colors types & add Colors type to Icon component fix: Text colors suggestions

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -17,6 +17,12 @@
       "@hooks/*": [
         "./src/hooks/*"
       ],
+      "@constants/*": [
+        "./src/constants/*"
+      ],
+      "@type/*": [
+        "./src/types/*"
+      ],
     }
   }
 }
